# openQ4

./: .gitignore  AGENTS.md  BUILDING.md  InstallationLog.txt  README.md  TECHNICAL.md  meson.build  meson_options.txt
$tmp/: tables.mtr
.codex/environments/: openq4.toml
.github/scripts/: issue-triage.mjs
.github/workflows/: cleanup-install-openbase-cfg.yml  cleanup-install-openq4-cfg.yml  commit-validation.yml  manual-release.yml  nightly-builds.yml  purge-history-src-paths.yml  push-verification.yml
.install/: OpenQ4.icns  mgscope_sendinput.cfg  scope_autotest_generated.cfg
assets/: README.html
assets/docs/: README.html
assets/linux/: openq4.desktop.in
assets/release/: README.html
content/baseoq4/: default.cfg  meson.build  mod.json  openq4_defaults.cfg
content/baseoq4/botfiles/: items.c  weapons.c
content/baseoq4/botfiles/bots/: default_c.c  major_c.c  major_i.c  major_w.c
content/baseoq4/def/: airdefense1_noblue_loading.def  bot_support.def
content/baseoq4/def/weapons/: napalmgun_openq4.def
content/baseoq4/glprogs/: bloom_extract.fs  duke_snow.fs  lightgrid_indirect.fs  shadow_interaction.fs  shadow_point_interaction.fs  soft_particle.fs  soft_particle.vs
content/baseoq4/guis/: mainmenu.gui
content/baseoq4/guis/loading/: mplevel.gui
content/baseoq4/guis/menu/settings/: game.gui  game_hovers.gui
content/baseoq4/maps/game/: airdefense1_noblue.aas128  airdefense1_noblue.aas250  airdefense1_noblue.aas32  airdefense1_noblue.aas48  airdefense1_noblue.aas96  airdefense1_noblue.reverb
content/baseoq4/materials/: postprocess_openq4.mtr
content/baseoq4/strings/: english_code.lang  english_lips.lang  english_mappack.lang  english_maps.lang  english_openq4.lang  french_code.lang  french_guis.lang  french_lips.lang  french_mappack.lang  french_maps.lang  french_openq4.lang  italian_code.lang  italian_guis.lang  italian_lips.lang  italian_mappack.lang  italian_maps.lang  italian_openq4.lang  spanish_code.lang  spanish_guis.lang  spanish_lips.lang  spanish_mappack.lang  spanish_maps.lang  spanish_openq4.lang
doc/: BSE-VERIFICATION.md  EXECUTION-REPORT.md  QUICKSTART-sanitization.md  STRUCTURE.md  SUMMARY-sanitization.md  git-history-sanitization-guide.md  license-compliance-checklist.md  quake4-bse-research-and-implementation-plan.md
docs-dev/: gl-renderer-modernization.md  high-framerate-rendering-plan.md  issue-triage-automation.md  official-pk4-checksums.md  platform-support.md  quake4-light-entity-parity.md  release-completion.md  renderdoc-workflow.md  renderer-validation-matrix.md  retail-q4-decl-parity-audit.md  retail-q4-vs-openq4-engine-cvars.md  sdl3-linux-macos-migration.md
docs-dev/legacy/: README.md
docs-dev/plans/: 2026-05-11-high-performance-renderer.md  2026-05-13-clustered-hybrid-gl-renderer.md  2026-05-14-renderer-audit-remediation-plan.md  2026-05-14-renderer-recovery-performance-parity.md  2026-05-18-renderer-round-4.md  2026-05-19-pbr-material-support.md
docs-dev/proposals/: bloom-and-hdr-postprocessing-27-3-26.md  lightgrids.md  rbdoom-shadow-modernization-spec.md  rbdoom3-bfg-parity-modernization-plan.md  rbdoom3-indirect-lighting-stack-spec.md  rbdoom3-pbr-interaction-modernization-spec.md  shader-robustness.md  transparency-shadowmapping.md
docs-user/: display-settings.md  gameplay-settings.md  light-grids.md  multiplayer-networking.md  shadow-mapping.md  steam-deck.md
install/openbase/: OpenQ4Config.cfg  bse_diag.cfg  bse_diag_long.cfg  gtrace.cfg
openbase/: meson.build
openbase/glprogs/: blur.fs  blur.vs
openbase/materials/: postprocess_openq4.mtr
openq4/: meson.build
openq4/glprogs/: crt.fs  hdr_luminance.fs  lightgrid_indirect.vs  openprey_bloom.fs  openprey_bloom_extract.fs  openq4_phase6_ssr.fp  openq4_shadow_interaction.fs  openq4_shadow_interaction.vs  openq4_shadow_point_caster.vs  openq4_shadow_point_interaction.vs  shadow_debug_overlay.fs  shadow_debug_overlay.vs  shadow_interaction.fs  shadow_interaction.vs  shadow_point_caster.fs  shadow_proj_caster.fs  shadow_proj_caster.vs  shadow_proj_translucent_caster.fs  ssao.fs
openq4/guis/loading/: generic.gui  mplevel.gui
openq4/materials/: postprocess_openq4.mtr
openq4/strings/: english_openq4.lang
src/aas/: AASFile.cpp
src/bse/: BSE.h  BSEInterface.h  BSE_API.h  BSE_Effect.cpp  BSE_EffectTemplate.cpp  BSE_Envelopes.cpp  BSE_Manager.cpp  BSE_Module.cpp  BSE_ParseParticle2.cpp  BSE_Particle.cpp  BSE_Particle.h  BSE_Segment.cpp  BSE_SegmentRuntime.cpp  BSE_SegmentTemplate.cpp  BSE_SpawnDomains.cpp
src/cm/: CollisionModel.cpp  CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_translate.cpp
src/framework/: CVarSystem.cpp  CmdSystem.cpp  Common.cpp  Common.h  Console.cpp  Console.h  DeclAF.cpp  DeclEntityDef.cpp  DeclLipSync.cpp  DeclManager.cpp  DeclMatType.cpp  DeclPDA.cpp  DeclPlayback.cpp  DeclPlayerModel.cpp  DeclPlayerModel.h  DeclSkin.cpp  DeclTable.cpp  EditField.cpp  EditField.h  FileSystem.cpp  FileSystem.h  KeyInput.cpp  RenderDoc.cpp  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  Unzip.cpp  UsercmdGen.cpp  UsercmdGen.h  declManager.h  licensee.h
src/game/: Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Light.cpp  MultiplayerGame.cpp  Player.cpp  Player.h  Projectile.cpp  Weapon.cpp  Weapon.h
src/idlib/: Heap.cpp  Lexer.cpp  Lexer.h  Lib.cpp  Str.cpp  Str.h  precompiled.h
src/renderer/: BinaryImage.cpp  GLDebugScope.cpp  GLDebugScope.h  GLStateCache.cpp  GLStateCache.h  GeometryResources.cpp  GeometryResources.h  GuiModel.cpp  Image.h  ImageManager.cpp  ImageOpts.h  Image_intrinsic.cpp  Image_load.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MaterialResourceTable.cpp  MaterialResourceTable.h  Model.cpp  Model.h  ModelDecal.cpp  ModelManager.cpp  Model_local.h  Model_md5.cpp  Model_md5r.cpp  ModernClusteredLighting.cpp  RenderGraph.cpp  (+53 more)
subprojects/openal-soft-prebuilt/: meson.build
tools/: sanitize-history.ps1
(+167 files in other folders)
