option(
  'use_pch',
  type: 'boolean',
  value: true,
  description: 'Enable precompiled headers (src/idlib/precompiled.h).',
)

option(
  'build_engine',
  type: 'boolean',
  value: true,
  description: 'Build engine executables (OpenQ4-client_<arch>/OpenQ4-ded_<arch>).',
)

option(
  'build_games',
  type: 'boolean',
  value: true,
  description: 'Build game modules from the synchronized game source mirror.',
)

option(
  'build_game_unified',
  type: 'boolean',
  value: true,
  description: 'Build the unified game module (game_<arch>) that handles both SP and MP without a DLL reload.',
)

option(
  'build_game_sp',
  type: 'boolean',
  value: false,
  description: 'Build the standalone single-player game module (game-sp_<arch>). Prefer build_game_unified for new builds.',
)

option(
  'build_game_mp',
  type: 'boolean',
  value: false,
  description: 'Build the standalone multiplayer game module (game-mp_<arch>). Prefer build_game_unified for new builds.',
)

option(
  'build_libbse',
  type: 'boolean',
  value: true,
  description: 'Build the external BSE runtime module (libbse-q4) from OpenQ4-BSE.',
)

option(
  'platform_backend',
  type: 'combo',
  choices: ['sdl3', 'legacy_win32', 'native'],
  value: 'sdl3',
  description: 'Window/input backend on Windows (SDL3 is default; legacy_win32 is transitional). Non-Windows hosts always use native platform sources.',
)

option(
  'enforce_msvc_2026',
  type: 'boolean',
  value: false,
  description: 'Fail configure when MSVC is older than the VS 2026 baseline (19.46+).',
)
